# CITRUS

./: .gitignore  CMakeLists.txt  README.md
include/: analyzer.hpp  cli.hpp  clock.hpp  execution.hpp  function-selector.hpp  fuzzer.hpp  logger.hpp  model.hpp  mutator.hpp  prioritize.hpp  program-context.hpp  random.hpp  sequencegen.hpp  statement.hpp  traversal.hpp  type.hpp  util.hpp  writer.hpp
include/bpstd/: optional.hpp
include/func/: action.hpp  api.hpp
replication/: CITRUS_exp_data.xlsx
run/: _template.sh  hjson.sh  json-voorhees.sh  jsonbox.sh  jsoncpp.sh  jvar.sh  re2.sh  tinyxml2.sh  yaml-cpp.sh
scripts/: batch_libfuzzer.py  bootstrap.sh  build.sh  dep.sh
src/: CMakeLists.txt  analyzer.cpp  cli.cpp  clock.cpp  execution.cpp  function-selector.cpp  fuzzer.cpp  logger.cpp  main.cpp  model.cpp  mutator.cpp  program-context.cpp  random.cpp  sequencegen.cpp  statement.cpp  traversal.cpp  type.cpp  util.cpp  writer.cpp
src/func/: action.cpp  api.cpp  main.cpp
